# e2e-tool

./: .gitignore  CMakeLists.txt  Makefile  Makefile.windows  README.md  alice.pem  bob.pem  build.bat  paths-to-remove.txt  requirements.txt  requirements_im.txt  sm2_kex_demo.c  test_sm2_ecdh  test_sm2_ecdh.c
cli/: main.c
crypto/: zuc_ctypes.py
hide/: image_steganography.py  pdf_steganography.py  steg.py  utils.py  video_steganography.py
include/: sm2_ecdh.h
keys/: taki_priv.hex  taki_pub.hex  umiri_priv.hex  umiri_pub.hex
net/: README_IM.md  USAGE.md  USAGE_ENHANCED.md  client.py  client_factory.py  firebase_client.py  quick_start.py  run_client.py  server.py  socketio_client.py  websocket_client.py  websocket_client_improved.py  websocket_server.py  整理总结.md  连接稳定性修复.md
net/tests/: README.md  basic_server.py  create_test_image.py  create_test_pdf.py  debug_communication.py  debug_file_transfer.py  file_flow_diagram.md  fix_proxy.py  local_client.py  run_tests.py  simple_server.py  test_basic_server.py  test_chunked_transfer.py  test_connection.py  test_connection_stability.py  test_decrypt_message.py  test_enhanced_client.py  test_extract_received.py  test_features.py  test_file_transfer_complete.py  test_full_communication.py  test_heartbeat_fix.py  test_imports.py  test_port_client.py  test_port_server.py  test_real_client.py  test_simple_client.py  test_simple_communication.py  test_simple_server.py  test_simple_video.py  test_steg.py  test_summary.py  test_video_fix.py  test_video_stability.py
src/: sm2_ecdh.c
test/: file_client.py  file_server.py  test.txt  test_image_steg.py  test_pdf_steg.py  test_perf.py  test_sm2_ecdh  test_video_steg.py  test_zuc_ctypes.py
tools/: zuc_to_bin.py  zuc_to_bin.sh
